ProyectoIndividual/force-app/main/default/objects/Trail_Module__c/Trail_Module__c.object-meta.xml
<CustomObject>
    <label>Trail_Module</label>
    <nameField>
        <displayFormat>TM - {0000}</displayFormat>
        <label>Trail_Module</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trail_Modules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>