ProyectoIndividual/force-app/main/default/objects/Trail_Module__c/fields/Module_Name__c.field-meta.xml
<CustomField>
    <fullName>Module_Name__c</fullName>
    <label>Module Name</label>
    <referenceTo>Module__c</referenceTo>
    <relationshipLabel>Trail_Modules</relationshipLabel>
    <relationshipName>Trail_Modules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>