ProyectoIndividual/force-app/main/default/objects/Trail_Module__c/fields/Total_Time__c.field-meta.xml
<CustomField>
    <fullName>Total_Time__c</fullName>
    <label>Total Time</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>