ProyectoIndividual/force-app/main/default/objects/Trail_Module__c/fields/Trail_Name__c.field-meta.xml
<CustomField>
    <fullName>Trail_Name__c</fullName>
    <label>Trail Name</label>
    <referenceTo>Trail__c</referenceTo>
    <relationshipLabel>Trail_Modules</relationshipLabel>
    <relationshipName>Trail_Modules</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>