ProyectoIndividual/force-app/main/default/objects/Trail_Module__c/validationRules/Vinculation.validationRule-meta.xml
<ValidationRule>
    <fullName>Vinculation</fullName>
    <active>true</active>
    <errorConditionFormula>IF( Module__r.Active__c ==false, true, false)</errorConditionFormula>
    <errorMessage>Error</errorMessage>
</ValidationRule>